hphp/hack/test/typecheck/readonly/lambda.php.exp
File "lambda.php", line 17, characters 5-16:
This expression is readonly, its members cannot be modified (Parsing[1002])
File "lambda.php", line 19, characters 5-16:
This expression is readonly, its members cannot be modified (Parsing[1002])
